syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "xchain.proto";

enum XcheckErrorEnum {
  XCHECK_SUCCESS = 0;
  XCHECK_UNKNOW_ERROR = 1;
  XCHECK_CONNECT_REFUSE = 2;
  XCHECK_INCONFORMITY_REFUSE = 3;
}
// Check rpc service
message ComplianceCheckRequest {
  Header header = 1;
  // the check mask, reserved 32 bit for up to 32 check mask
  int32 check_mask = 2;
  int64 timestamp = 3;
  // the transaction data to be checked
  TxStatus tx_data = 4;
  // signature of this request
  string signature = 5;
}
// ComplianceCheckResponse Compliance check response
message ComplianceCheckResponse {
  Header header = 1;
  SignatureInfo signature = 2;
}
message TransferCheckResponse {
  Header header = 1;
  SignatureInfo signature = 2;
}
// Check rpc service
service Xcheck {
  // ComplianceCheck check transaction
  rpc ComplianceCheck(TxStatus) returns (ComplianceCheckResponse);
  rpc TransferCheck(TxStatus) returns (TransferCheckResponse);
  // Add ComplianceCheckV2 to support compliance check mask
  rpc ComplianceCheckV2(ComplianceCheckRequest)
      returns (ComplianceCheckResponse);
}